big update sur toutes les pages

--- a/app2.html
+++ b/app2.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="app2.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <title>app2</title>
 </head>
 
@@ -25,12 +26,12 @@
 
 
 
-                <img src="images/lowe.png" alt="logo">
+            <img src="images/lowe.png" alt="logo">
 
-                <a href="app-favorites.html">App présentation</a>
-                <a href="app1.html">Tik Tok</a>
-                <a href="app2.html">Wechat</a>
-                <a href="app3.html">Youtube</a>
+            <a href="app-favorites.html">App présentation</a>
+            <a href="app1.html">Tik Tok</a>
+            <a href="app2.html">Wechat</a>
+            <a href="app3.html">Youtube</a>
         </nav>
     </header>
 
@@ -75,19 +76,20 @@
                 <article class="goo-container">
                     <div><img src="images/chawe3.jpg" alt="wechat"></div>
 
-                    <div>
+                    <div class="textwe">
                         <p>
 
                             Plus qu’une application de messagerie et de médias sociaux, WeChat est un véritable mode de
-                            vie pour plus d’un milliard <br />
-                            d’utilisateurs dans le monde. Discutez, passez des appels, suivez l’actualité, utilisez des
-                            services locaux avec les <br />
-                            Comptes officiels et les Mini-programmes, jouez à des jeux passionnants avec vos amis,
-                            profitez des fonctions de <br />
+                            vie pour plus d’un milliard d’utilisateurs <br />
+                            dans le monde. Discutez, passez des appels, suivez l’actualité, utilisez des services locaux
+                            avec les Comptes officiels et les <br />
+                            Mini-programmes, jouez à des jeux passionnants avec vos amis, profitez des fonctions de
                             paiement mobile (WeChat Pay) et bien plus encore.<br />
 
-                            <a href="https://play.google.com/store/apps/details?id=com.tencent.mm&hl=fr" target="blank" class="boutola">Android</a>
-                            <a href="https://apps.apple.com/fr/app/wechat/id414478124" target="blank" class="boutola">Apple</a>
+                            <a href="https://play.google.com/store/apps/details?id=com.tencent.mm&hl=fr" target="blank"
+                                class="boutola">Android</a>
+                            <a href="https://apps.apple.com/fr/app/wechat/id414478124" target="blank"
+                                class="boutola">Apple</a>
                         </p>
 
 
@@ -125,24 +127,21 @@
             <article class="fintext">
                 <p>
                     WeChat [wiˈtʃæt]1 ou Weixin (chinois : 微信 ; pinyin : Wēixìn ; litt. « micro-message » [u̯eɪ̯˥
-                    ɕin˥˩]2
-                    Écouter) est une application mobile <br />
+                    ɕin˥˩]2 Écouter) est une application mobile <br />
                     de messagerie textuelle et vocale développée par le géant chinois Tencent Holdings Limited. Elle
-                    permet
-                    également les appels audio et vidéo. <br />
+                    permet également les appels audio et vidéo. <br />
                     L'application est très populaire en Chine et compte plus d'un milliard de comptes dans le monde en
-                    mars
-                    20183. Elle est disponible dans<br />
+                    mars 20183. Elle est disponible dans<br />
                     d'autres langues depuis avril 2012, date du lancement en dehors de la Chine. Weixin est le nom
-                    chinois
-                    de l'application lancée par <br />
+                    chinois de l'application lancée par <br />
                     l'entreprise Internet chinoise Tencent. Son expansion en 2013 à l'international comprend l'Inde
                     notamment4. L’application génère maintenant <br />
                     700 millions d’activités de géolocalisation par jour.<br />
                 </p>
             </article>
 
-            <a href="https://www.ladn.eu/tech-a-suivre/pourquoi-sinteresser-wechat-superappli/" target="blank" class="bouton3">Venez découvrir ! </a>
+            <a href="https://www.ladn.eu/tech-a-suivre/pourquoi-sinteresser-wechat-superappli/" target="blank"
+                class="bouton3">Venez découvrir ! </a>
         </section>
 
 
@@ -172,9 +171,10 @@
 
         <section class="footer">
             <a href="https://www.facebook.com/wechatapp/" target="blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="twitter.com/wechatapp?s=11" target="blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://twitter.com/wechatapp?lang=fr" target="blank"><i class="fab fa-twitter"></i></a>
             <p>
-                <a href="mailto:aicha.ouattara@laplateforme.io" target="blank">Contactez-nous</a> / © Tikweyou Tous droits réservés.
+                <a href="mailto:aicha.ouattara@laplateforme.io" target="blank">Contactez-nous</a> / © Tikweyou Tous
+                droits réservés.
             </p>
 
         </section>
