--- a/app3.html
+++ b/app3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="app3.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Carter+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Carter+One&display=swap" rel="stylesheet">
 
     <title>app3</title>
 </head>
@@ -26,12 +26,12 @@
 
 
 
-                <img src="images/loyou.png" alt="logo">
+            <img src="images/loyou.png" alt="logo">
 
-                <a href="app-favorites.html">App présentation</a>
-                <a href="app1.html">Tik Tok</a>
-                <a href="app2.html">Wechat</a>
-                <a href="app3.html">Youtube</a>
+            <a href="app-favorites.html">App présentation</a>
+            <a href="app1.html">Tik Tok</a>
+            <a href="app2.html">Wechat</a>
+            <a href="app3.html">Youtube</a>
         </nav>
     </header>
 
@@ -47,7 +47,7 @@
 
             <div class="you">
                 <h1>
-                    ON S'AMBIANCE 
+                    ON S'AMBIANCE
                 </h1>
                 <a href="https://www.youtube.com/c/grafikart/playlists" target="blank">plus ?</a>
 
@@ -66,18 +66,23 @@
                 <img src="images/yougo.png" alt="youtube">
             </article>
 
-            <article >
+            <article>
                 <p>
-                    YouTube (en français : [ jutyb] ou [ jutjub]a, en anglais : [ˈjutub]b) est un site web d’hébergement de vidéos et un média social sur lequel <br />
-                    les utilisateurs peuvent envoyer, regarder, commenter, évaluer et partager des vidéos en streaming. Il a été créé en février 2005 par Steve Chen, <br />
-                    Chad Hurley et Jawed Karim, trois anciens employés de PayPal, et racheté par Google en octobre 2006 pour 1,65 milliard de<br />
-                    dollars. Le service est situé à San Bruno, en Californie. En 2009, environ 350 millions de personnes visitent<br />
-                    chaque mois ce site9. Le 28 octobre 2010, l'ensemble des chaînes de YouTube atteint le milliard d'abonnés10. En 2020,<br />
+                    YouTube (en français : [ jutyb] ou [ jutjub]a, en anglais : [ˈjutub]b) est un site web d’hébergement
+                    de vidéos et un média social sur lequel <br />
+                    les utilisateurs peuvent envoyer, regarder, commenter, évaluer et partager des vidéos en streaming.
+                    Il a été créé en février 2005 par Steve Chen, <br />
+                    Chad Hurley et Jawed Karim, trois anciens employés de PayPal, et racheté par Google en octobre 2006
+                    pour 1,65 milliard de<br />
+                    dollars. Le service est situé à San Bruno, en Californie. En 2009, environ 350 millions de personnes
+                    visitent<br />
+                    chaque mois ce site9. Le 28 octobre 2010, l'ensemble des chaînes de YouTube atteint le milliard
+                    d'abonnés10. En 2020,<br />
                     chaque mois, YouTube compte plus de 2 milliards d'utilisateurs connectés.<br />
                 </p>
 
                 <a href="https://apps.apple.com/fr/app/youtube/id544007664" target="blank">TELECHARGER</a>
-            
+
             </article>
             <article>
                 <img src="images/youga.png" alt="youtube">
@@ -87,7 +92,7 @@
 
 
         <section class="youtu">
-          <a href="https://play.google.com/store/apps/details?id=com.google.android.youtube&hl=fr" target="blank" ><img src="https://media.giphy.com/media/gjNpNqwG5H8oRYfZFe/giphy.gif" target="blank"  alt="youtube"></a> 
+            <img src="https://media.giphy.com/media/gjNpNqwG5H8oRYfZFe/giphy.gif" alt="youtube">
         </section>
 
         <section class="youta-container">
@@ -101,7 +106,7 @@
                     <img src="images/ya3.PNG" alt="youtube">
                 </div>
 
-                 <div>
+                <div>
                     <img src="images/ya4.PNG" alt="youtube">
                     <img src="images/ya5.PNG" alt="youtube">
                     <img src="images/ya6.PNG" alt="youtube">
@@ -118,15 +123,16 @@
     <footer>
 
         <section class="footer">
-             <div>
-            <a href="https://www.instagram.com/youtube/?hl=fr" target="blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/youtube/" target="blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="twitter.com/youtube?s=11 " target="blank" ><i class="fab fa-twitter"></i></a>
-           </div>
+            <div>
+                <a href="https://www.instagram.com/youtube/?hl=fr" target="blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/youtube/" target="blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="twitter.com/youtube?s=11 " target="blank"><i class="fab fa-twitter"></i></a>
+            </div>
 
-           <div>
-                <a href="mailto:tikweyou@laplateforme.io" target="blank">Contactez-nous</a> / © Tikweyou Tous droits réservés.
-          </div>
+            <div>
+                <a href="mailto:tikweyou@laplateforme.io" target="blank">Contactez-nous</a> / © Tikweyou Tous droits
+                réservés.
+            </div>
         </section>
 
 
