--- a/app-favorites.html
+++ b/app-favorites.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="app-favorites.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Palanquin:wght@100&display=swap" rel="stylesheet">
     <title>app-favorites</title>
 
 </head>
@@ -20,12 +21,12 @@
 
 
 
-                <img src="images/LOGO.png" alt="logo">
+            <img src="images/LOGO.png" alt="logo">
 
-                <a href="app-favorites.html">App présentation</a>
-                <a href="app1.html">Tik Tok</a>
-                <a href="app2.html">Wechat</a>
-                <a href="app3.html">Youtube</a>
+            <a href="app-favorites.html">App présentation</a>
+            <a href="app1.html">Tik Tok</a>
+            <a href="app2.html">Wechat</a>
+            <a href="app3.html">Youtube</a>
         </nav>
     </header>
 
@@ -65,7 +66,8 @@
                     marché
                     chinois.
                 </p>
-                <a href="https://play.google.com/store/apps/details?id=com.downloaderfor.tiktok&hl=fr" target="blank" class="boutolo">Android</a>
+                <a href="https://play.google.com/store/apps/details?id=com.downloaderfor.tiktok&hl=fr" target="blank"
+                    class="boutolo">Android</a>
                 <a href="https://apps.apple.com/fr/app/tiktok/id835599320" target="blank" class="boutolo">Apple</a>
 
             </div>
@@ -95,7 +97,8 @@
                     maintenant
                     700 millions d’activités de géolocalisation par jour.
                 </p>
-                <a href="https://play.google.com/store/apps/details?id=com.tencent.mm&hl=fr" target="blank" class="boutolo">Android</a>
+                <a href="https://play.google.com/store/apps/details?id=com.tencent.mm&hl=fr" target="blank"
+                    class="boutolo">Android</a>
                 <a href="https://apps.apple.com/fr/app/wechat/id414478124" target="blank" class="boutolo">Apple</a>
 
             </article>
@@ -150,7 +153,8 @@
                     2 milliards
                     d'utilisateurs connectés.
                 </p>
-                <a href="https://play.google.com/store/apps/details?id=com.google.android.youtube&hl=fr" target="blank" class="boutolo">Android</a>
+                <a href="https://play.google.com/store/apps/details?id=com.google.android.youtube&hl=fr" target="blank"
+                    class="boutolo">Android</a>
                 <a href="https://apps.apple.com/fr/app/youtube/id544007664" target="blank" class="boutolo">Apple</a>
 
             </article>
@@ -165,16 +169,16 @@
 
         <section class="footer">
             <div>
-            <a href="https://www.instagram.com/?hl=fr"><i class="fab fa-instagram"></i></a>
-            <a href="https://fr-fr.facebook.com/"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com/login?lang=fr"><i class="fab fa-twitter"></i></a>
-          </div>
+                <a href="https://www.instagram.com/?hl=fr"><i class="fab fa-instagram"></i></a>
+                <a href="https://fr-fr.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://twitter.com/login?lang=fr"><i class="fab fa-twitter"></i></a>
+            </div>
 
             <div class="reseaux">
-             <p>
-                <a href="mailto:tikweyou@laplateforme.io">Contactez-nous</a> / © Tikweyou Tous droits réservés.
-            </p>
-          </div>
+                <p>
+                    <a href="mailto:tikweyou@laplateforme.io">Contactez-nous</a> / © Tikweyou Tous droits réservés.
+                </p>
+            </div>
 
         </section>
 
