--- a/app1.html
+++ b/app1.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="app1.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-        
+
     <title>app1</title>
 </head>
 
@@ -20,12 +20,12 @@
 
 
 
-                <img src="images/loti.png" alt="logo">
+            <img src="images/loti.png" alt="logo">
 
-                <a href="app-favorites.html">App présentation</a>
-                <a href="app1.html">Tik Tok</a>
-                <a href="app2.html">Wechat</a>
-                <a href="app3.html">Youtube</a>
+            <a href="app-favorites.html">App présentation</a>
+            <a href="app1.html">Tik Tok</a>
+            <a href="app2.html">Wechat</a>
+            <a href="app3.html">Youtube</a>
         </nav>
     </header>
 
@@ -95,7 +95,8 @@
         </section>
 
         <article class="titoo">
-           <a href="https://play.google.com/store/apps/details?id=com.downloaderfor.tiktok&hl=fr" target="blank"><img src="images/telecharok.jpg" alt=""></a> 
+            <a href="https://play.google.com/store/apps/details?id=com.downloaderfor.tiktok&hl=fr" target="blank"><img
+                    src="images/telecharok.jpg" alt=""></a>
         </article>
 
 
@@ -128,7 +129,8 @@
     <footer>
 
         <section class="footer">
-            <a href="https://instagram.com/tiktok?igshid=11n03ran9lh5d" target="blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://instagram.com/tiktok?igshid=11n03ran9lh5d" target="blank"><i
+                    class="fab fa-instagram"></i></a>
             <a href="https://fr-fr.facebook.com/tiktok/" target="blank"><i class="fab fa-facebook-f"></i></a>
             <a href="twitter.com/tiktok_france?s=11 " target="blank"><i class="fab fa-twitter"></i></a>
 
