corrections ... sur les css et html

--- a/app2.html
+++ b/app2.html
@@ -44,7 +44,7 @@
 
 
         <section class="we-container">
-            <div class="we2">
+            <div>
                 <h1>VIENS TCHATCHER</h1>
             </div>
 
@@ -53,7 +53,7 @@
                 <img src="images/wechat.png" alt="tiktok">
             </div>
 
-            <div class="we">
+            <div>
                 <h1>AVEC WECHAT</h1>
             </div>
         </section>
