--- a/app1.html
+++ b/app1.html
@@ -40,7 +40,7 @@
                 <img src="images/tiktok.png" alt="tiktok">
             </article>
 
-            <article class="tik">
+            <article>
                 <h1>
                     TIK.DANCE.TOK
                 </h1>
