verification et update

--- a/app3.html
+++ b/app3.html
@@ -81,8 +81,6 @@
                     chaque mois, YouTube compte plus de 2 milliards d'utilisateurs connectés.<br />
                 </p>
 
-                <a href="https://apps.apple.com/fr/app/youtube/id544007664" target="blank">TELECHARGER</a>
-
             </article>
             <article>
                 <img src="images/youga.png" alt="youtube">
@@ -91,9 +89,19 @@
         </section>
 
 
+
+        <article class="telecharger-container">
+            <a href="https://apps.apple.com/fr/app/youtube/id544007664" target="blank"> <img src="images/appstore.png"
+                    alt="applestore"></a>
+            <a href="https://play.google.com/store/apps/details?id=com.google.android.youtube&hl=fr" target="blank"><img
+                    src="images/googlesto.png" alt="googlestore"></a>
+        </article>
+
         <section class="youtu">
             <img src="https://media.giphy.com/media/gjNpNqwG5H8oRYfZFe/giphy.gif" alt="youtube">
         </section>
+
+
 
         <section class="youta-container">
             <article>
