updapte app favorites page

--- a/app-favorites.html
+++ b/app-favorites.html
@@ -34,7 +34,7 @@
     <main>
 
 
-        <section class="noir">
+        <section>
             <img src="images/acceuil.png" alt="acceuil">
         </section>
 
