--- a/app1.html
+++ b/app1.html
@@ -52,11 +52,11 @@
 
         <section class="ap-container">
             <article>
-                <img src="images/ap1 copie.jpg" alt="tiktokimage">
+                <img src="images/apacopie.jpg" alt="tiktokimage">
             </article>
 
             <article>
-                <img src="images/ap2 copie.jpg" alt="tiktokimage">
+                <img src="images/apocopie.jpg" alt="tiktokimage">
             </article>
         </section>
 
